# mpags_template

./: .gitignore  Instructions.md  README.md  main.py  pyproject.toml  setup.py  setup.txt  setup_linux.sh  setup_windows.bat  test.ipynb  test.py  test2.py  uv.toml
.github/: copilot-instructions.md
.scripts/: audit.py
1. Basics of Python/: ex1.3.py
