[project]
name = "scipython"
version = "0.1.0"
description = "A modern Python template for scientific computing at the UoN School of Physics"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Mike Smith", email = "mike.i.smith@nottingham.ac.uk" }
]

license = { text = "MIT" }

# Core dependencies required to run your python scripts
dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "matplotlib>=3.8.0",
    "scipy>=1.12.0",
]

[dependency-groups]
# Development dependencies needed for interactive work, testing, and IDE support
dev = [
    "ipython>=8.20.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
]

[tool.uv]
managed = true
