[project]
name = "phys4038"       
version = "0.1.0"
description = "A Python template for PHYS4038 - scientific computing at the UoN School of Physics"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Mike Smith", email = "mike.i.smith@nottingham.ac.uk" }
]

license = { text = "MIT" }

# Core dependencies required to run your python scripts
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "scipy",
    "scikit-image",
    "jupyterlab",
    "ipywidgets",
    "requests",
    "requests-cache",
    "beautifulsoup4",
    "ipython>=8.20.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
]



